# pysru-accounting

./: LICENSE  README.md  pyproject.toml  setup.py
pysru_accounting/: __init__.py  blankettsru.py  infosru.py
