[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pysru-accounting"
version = "0.0.2"
authors =[{name = "Thomas Petig", email = "thomas@petig.eu"}]
description="SRU file encoder"
readme="README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thpe/pysru-accounting"

